[package]
name = "aggregate-fractal-dim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.3.0"
fractal-analysis = "0.2.0"
morton-encoding = "2.0.1"
ndarray = "0.15.6"
npyz = { version = "0.8.3", features = ["npz"] }
serde = { version = "1.0.193", features = ["derive"] }

[profile.release]
lto = true
strip = true